--- a/src/index.pug
+++ b/src/index.pug
@@ -46,7 +46,7 @@ html(lang="en")
                                             .intro__item 
                                                 p.intro__p на #[span 4-5 ] %
                                                 p.intro__p ежегордно будет расти российский рынок IT в течение следующих лет
-                                a(href="#!").intro__btn Смотреть все курсы по программированию 
+                                a(href="courses.html").intro__btn Смотреть все курсы по программированию 
                 include components/direction 
                 +direction
                 include components/lessons 
